fix modal saved item spacing

--- a/src/styles/components/_modal-saved-item.scss
+++ b/src/styles/components/_modal-saved-item.scss
@@ -7,7 +7,7 @@
   // font-family: $sans-serif-stack;
   margin-left: 15px;
   &:first-of-type {
-    margin-top: 20px;
+    margin-top: 22px;
   }
 }
 
@@ -16,6 +16,7 @@
   // padding-left: 0;
   font-weight: $font-weight-bold;
   color: $night-grey;
+  margin: 15px 0;
 }
 
 .modal-item-group__items label {
@@ -25,11 +26,15 @@
 .modal-item-group__title {
   @extend .item-group__title;
   font-size: 15px;
-  margin: 20px 0px 23px 0;
+  margin: 20px 0px 20px 0;
 }
 
 .modal-saved-item {
-  margin-bottom: 23px;
+  margin-bottom: 15px;
+
+  label::before {
+    margin-top: 3px;
+  }
 }
 
 // .modal-saved-item__inputs {
